objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <summarizedField>SBQQ__QuoteLine__c.Annualized_ACV__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ACV_ARR_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__AutomaticValidateAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Address Before(Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__AvaTaxMessage__c</fullName>
        <description>Displays AvaTax responses or messages.</description>
        <inlineHelpText>Displays AvaTax responses or messages.</inlineHelpText>
        <label>AvaTax Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Entity_Use_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity use codes indicate the reason for exemption.</description>
        <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
        <label>Entity/Use Code</label>
        <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Invoice_Message__c</fullName>
        <description>Invoice messaging returned by the AvaTax service.</description>
        <inlineHelpText>Invoice messaging returned by the AvaTax service.</inlineHelpText>
        <label>Invoice Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable / Disable seller importer of records.</description>
        <inlineHelpText>Enable / Disable seller importer of records.</inlineHelpText>
        <label>Is Seller Importer Of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Quote_AutomateTaxCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers AvaTax to show the calculated tax.</description>
        <inlineHelpText>Triggers AvaTax to show the calculated tax.</inlineHelpText>
        <label>CalculateTax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__SalesTaxAmount__c</fullName>
        <description>Displays the tax amount calculated by AvaTax.</description>
        <inlineHelpText>Displays the tax amount calculated by AvaTax.</inlineHelpText>
        <label>Sales Tax Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Tax_Calculation_Status__c</fullName>
        <description>Displays the status of the tax.</description>
        <formula>IMAGE( 

CASE(     AVA_SFCPQ__AvaTaxMessage__c     , 

&quot;Tax Amount Is Up To Date&quot;, &quot;/img/msg_icons/confirm24.png&quot;, 

&quot;Automated Tax Calculation Triggered, Please Refresh Your Browser&quot;, &quot;/img/loading24.gif&quot;, 

&quot;Tax Amount is Outdated&quot;, &quot;/img/msg_icons/warning24.png&quot;, 

&quot;&quot;,&quot;&quot;,

&quot;/img/msg_icons/error24.png&quot;), 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the status of the tax.</inlineHelpText>
        <label>Tax Calculation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Has_Premier_Support__c</fullName>
        <formula>SBQQ__Account__r.Has_Premier_Support__c</formula>
        <label>Account Has Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <formula>TEXT(SBQQ__Account__r.Industry)</formula>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Approval_Needed__c</fullName>
        <formula>IF(!ISBLANK(SBQQ__Opportunity2__r.Agreement__c) &amp;&amp; (TEXT(SBQQ__Opportunity2__r.Agreement__r.Status__c) != &quot;Pending Signature&quot; &amp;&amp; TEXT(SBQQ__Opportunity2__r.Agreement__r.Status__c) != &quot;Executed&quot; &amp;&amp; TEXT(SBQQ__Opportunity2__r.Agreement__r.Status__c) != &quot;Cancelled&quot;), IF(TEXT(SBQQ__Opportunity2__r.Agreement__r.Status__c) != &quot;Approved&quot;, &quot;Agreement Not Approved&quot;, &quot;Ready for Signature&quot;),&quot;Past Quote Stage&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Approval Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Primary_Document__c</fullName>
        <formula>SBQQ__Opportunity2__r.Agreement__r.Primary_Document__c</formula>
        <label>Agreement Primary Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Sent_with_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Sent with Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CongaCurrencyCulture__c</fullName>
        <formula>IF( TEXT(CurrencyIsoCode) = &quot;USD&quot;, &quot;en-US&quot;,
IF( TEXT(CurrencyIsoCode) = &quot;GBP&quot;, &quot;en-GB&quot;,
IF( TEXT(CurrencyIsoCode) = &quot;EUR&quot;, &quot;en-IE&quot;,Null)))</formula>
        <label>CongaCurrencyCulture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Id__c</fullName>
        <formula>IF(TEXT(Template__c) = &quot;Discount and List Price Template&quot;,&quot;aBO5p000000oLkPGAU&quot;,
IF(TEXT(Template__c) = &quot;Standard Template&quot;,&quot;aBO0N000000L09iWAC&quot;,
Null))</formula>
        <label>Conga Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Signer__c</fullName>
        <defaultValue>&quot;0050N000007Zqd9QAC&quot;</defaultValue>
        <description>This was added to automate the Conga Signature process of an order.</description>
        <inlineHelpText>This field identifies who the Copado signer of the order form will be.  When a signature request is sent the Copado person here will be selected as the Copado signer of the order form and will receive the email from Conga Sign.</inlineHelpText>
        <label>Copado Signer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0050N000007Zqd9QAC</fullName>
                    <default>true</default>
                    <label>Walker Mitchell</label>
                </value>
                <value>
                    <fullName>0050N000007ZS2nQAG</fullName>
                    <label>Sabine Gillert</label>
                </value>
                <value>
                    <fullName>0050N00000813By</fullName>
                    <isActive>false</isActive>
                    <label>Simon Bishop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_ARR__c</fullName>
        <label>Current ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_License_TCV__c</fullName>
        <description>Shows the License value for the current contract at the moment of Quote creation and update. Calculated upon amendment quote creation or amendment quote date updates.</description>
        <inlineHelpText>Shows the License value for the current contract at the moment of Quote creation and update. Calculated upon amendment quote creation or amendment quote date updates.</inlineHelpText>
        <label>Current License TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This was created to help automate the conga sign process.</description>
        <inlineHelpText>This field is used by Conga Sign as the person to send the email request for signature.</inlineHelpText>
        <label>Customer Signer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Customer Signer)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <formula>TEXT( SBQQ__Account__r.Entity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID field</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Signer__c</fullName>
        <description>This field was added to automate the Conga signature process.</description>
        <inlineHelpText>This field identifies if the Customer or Copado is the first signer of an Order Form.  It is used by Conga Sign to route the signature request.</inlineHelpText>
        <label>First Signer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Copado</fullName>
                    <default>true</default>
                    <label>Copado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Quote_Document__c</fullName>
        <label>Latest Quote Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDQ_Quote__c</fullName>
        <label>MDQ Quote</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SegmentLabel__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MDQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Segmented_ACV__c</fullName>
        <label>Non-Segmented ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_ACV__c</fullName>
        <label>Non Standard ACV</label>
        <summarizedField>SBQQ__QuoteLine__c.Annualized_ACV__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Non_Standard_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <description>Indicates the number of months for a quote. Calculated upon quote creation and changes of quote start/end dates.</description>
        <inlineHelpText>Indicates the number of months for a quote. Calculated upon quote creation and changes of quote start/end dates.</inlineHelpText>
        <label>Number of Months</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_ACV__c</fullName>
        <description>a field to hold a one time product ACV in a summary with 1st Year AVC
to be populated by Price Rules + Summary variables and not visible on layouts</description>
        <label>One time ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_ACV__c</fullName>
        <formula>SBQQ__Opportunity2__r.ACV__c</formula>
        <label>Opportunity ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>SBQQ__Opportunity2__r.Amount</formula>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>IF( SBQQ__Primary__c == true, SBQQ__Opportunity2__r.CloseDate, null)</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Mail__c</fullName>
        <description>Holds the opportunity owner email to be referenced in the email template</description>
        <formula>SBQQ__Opportunity2__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>Field used to hold Owner Name to be referenced in email templates</description>
        <formula>SBQQ__Opportunity2__r.Owner.FirstName &amp; &quot; &quot; &amp; SBQQ__Opportunity2__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>IF( SBQQ__Primary__c == true, Text(SBQQ__Opportunity2__r.StageName), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>IF( SBQQ__Primary__c == true, Text(SBQQ__Opportunity2__r.Type), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Numbers__c</fullName>
        <inlineHelpText>Input field for capturing the PO number from the quote (using Conga Sign)</inlineHelpText>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Required_Text__c</fullName>
        <description>Used for Conga, customer to enter Yes/No in text.</description>
        <label>PO Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when a PO is required</inlineHelpText>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_is_not_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO is not required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Created_date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Discount_Matrix_Required_c__c</fullName>
        <formula>IF(  SBQQ__Account__r.PS_CPQ_Discount_Matrix_Required__c=TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that  Account is obligated to have Discount Matrix-based pricing</inlineHelpText>
        <label>Discount Matrix Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Entity_Spain_for_Output_Doc__c</fullName>
        <formula>IF(Entity__c= &quot;Spain&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Spain for Output Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Entity_UK_for_Output_Doc__c</fullName>
        <formula>IF(Entity__c= &quot;UK&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity UK for Output Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Entity_USA_for_Output_Doc__c</fullName>
        <formula>IF(Entity__c= &quot;USA&quot;, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity USA for Output Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Pricing_Group__c</fullName>
        <description>The Pricing Group of this Quote. Based on the Opportunity and used to determine Price Book used on this Quote.</description>
        <formula>TEXT(SBQQ__Opportunity2__r.PS_CPQ_Pricing_Group__c)</formula>
        <inlineHelpText>The Pricing Group of this Quote. Based on the Opportunity and used to determine Price Book used on this Quote.</inlineHelpText>
        <label>Pricing Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Term_in_Months__c</fullName>
        <description>The term of this Quote, in Months, rounded up.</description>
        <formula>IF( 
AND(YEAR(SBQQ__EndDate__c)=YEAR(SBQQ__StartDate__c),
MONTH(SBQQ__EndDate__c)=MONTH(SBQQ__StartDate__c)),
1,
IF(
DAY(SBQQ__EndDate__c)&lt;DAY(SBQQ__StartDate__c),
(MONTH(SBQQ__EndDate__c)-MONTH(SBQQ__StartDate__c))+((YEAR(SBQQ__EndDate__c)-YEAR(SBQQ__StartDate__c))*12),
((MONTH(SBQQ__EndDate__c)-MONTH(SBQQ__StartDate__c))+1)+((YEAR(SBQQ__EndDate__c)-YEAR(SBQQ__StartDate__c))*12)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The term of this Quote, in Months, rounded up.</inlineHelpText>
        <label>Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Copado_Billing_Entity_Address__c</fullName>
        <formula>CASE(PS_Copado_Billing_Entity__c , 
&quot;Copado, Inc.&quot;,&quot;20 W. Kinzie Street, Chicago, IL 60654&quot;, 
&quot;Copado Ltd.&quot;,&quot;15 Bishopsgate, London, EC2N 3AR, UK&quot;, 
&quot;Copado Solutions, S.L.&quot;,&quot;Paseo de la Castellana 77, 28046 MADRID SPAIN&quot;, 
&quot;111 W Illinois St, 5th Floor Chicago, IL 60654&quot;,
&quot;Copado Netherlands B.V.&quot;,&quot;Barbara Strozzilaan 201, 1083 HN Amsterdam, the Netherlands&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copado Billing Entity Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Copado_Billing_Entity__c</fullName>
        <formula>TEXT(SBQQ__Account__r.PS_Copado_Billing_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copado Billing Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Formatted_Contract_End_Date__c</fullName>
        <formula>TEXT(DAY( SBQQ__EndDate__c )) 
&amp; &quot;/&quot; &amp; 
CASE( 
MONTH(SBQQ__EndDate__c ), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sept&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) 
&amp; &quot;/&quot; &amp; TEXT(YEAR(SBQQ__EndDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Contract End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Formatted_Contract_Start_Date__c</fullName>
        <formula>TEXT(DAY( SBQQ__StartDate__c )) 
     &amp; &quot;/&quot;  &amp;
     CASE(
     MONTH(SBQQ__StartDate__c), 
            1, &quot;Jan&quot;, 
            2, &quot;Feb&quot;, 
            3, &quot;Mar&quot;, 
            4, &quot;Apr&quot;, 
            5, &quot;May&quot;, 
            6, &quot;Jun&quot;, 
            7, &quot;Jul&quot;, 
            8, &quot;Aug&quot;, 
            9, &quot;Sept&quot;, 
            10, &quot;Oct&quot;, 
            11, &quot;Nov&quot;, 
            12, &quot;Dec&quot;, 
            &quot;None&quot;) 
            &amp; &quot;/&quot; &amp; TEXT(YEAR(SBQQ__StartDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Contract Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Licence_Net_Amount__c</fullName>
        <description>Gives Net Amount of Licence Products</description>
        <label>Licence Net Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.PS_Is_Licence__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PS_Template_Date_Format__c</fullName>
        <formula>&quot;dd/mmm/yyyy&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Template_Licence_Net_Amount__c</fullName>
        <formula>PS_Licence_Net_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Licence Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Template_Net_Amount__c</fullName>
        <formula>SBQQ__NetAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                    <default>true</default>
                    <label>ACH</label>
                </value>
                <value>
                    <fullName>Check</fullName>
                    <isActive>false</isActive>
                    <label>Check</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_FirstName__c</fullName>
        <formula>SBQQ__PrimaryContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Mail__c</fullName>
        <description>Field on Quote to generate the correct email template.</description>
        <formula>SBQQ__PrimaryContact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Document_Title__c</fullName>
        <label>Primary Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Document__c</fullName>
        <label>Primary Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Email_Subject_Element__c</fullName>
        <description>Field to hold part of the email subject, when quote is sent</description>
        <formula>SBQQ__Opportunity2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Email Subject Element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Yr__c</fullName>
        <label>Quote Line Yr</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_License_TCV__c</fullName>
        <description>This field is used to calculate the Premier Support costs of the remaining TCV on the account.</description>
        <label>Remaining License TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_Quote_Fields__c</fullName>
        <formula>IF(ISBLANK(Conga_Template_Id__c),&quot;Template | &quot;,Null)&amp;IF(TEXT(Copado_Signer__c) = &quot;&quot;, &quot;Copado Signer | &quot;,&quot;&quot;)&amp;IF(ISBLANK(Customer_Signer__c),&quot;Customer Signer | &quot;,&quot;&quot;)&amp;IF(TEXT(First_Signer__c)=&quot;&quot;,&quot;First Signer | &quot;,&quot;&quot;)&amp;IF(ISBLANK( SBQQ__ExpirationDate__c ),&quot;Expires On | &quot;,&quot;&quot;)&amp;IF(TEXT( SBQQ__Status__c ) != &quot;Approved&quot;, &quot;The Quote must be approved | &quot;,&quot;&quot;)</formula>
        <label>Required Quote Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User_Profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account for this quote. Defaulted to the account for the opportunity when quote is created.</description>
        <inlineHelpText>The customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the amount additionally discounted on this quote.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AverageCustomerDiscount__c</fullName>
        <description>Average customer discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__ListAmount__c = 0, 0, ((SBQQ__ListAmount__c - SBQQ__CustomerAmount__c) / SBQQ__ListAmount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Customer Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__AveragePartnerDiscount__c</fullName>
        <description>Average partner discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__CustomerAmount__c = 0, 0, (SBQQ__CustomerAmount__c -  SBQQ__NetAmount__c) / SBQQ__CustomerAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average partner discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Partner Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingName__c</fullName>
        <description>Name for the Bill To address.</description>
        <inlineHelpText>Name for the Bill To address.</inlineHelpText>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingStreet__c</fullName>
        <description>Street portion of the billing address for this quote.</description>
        <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChangeVersion__c</fullName>
        <description>The Amend: Re-Quote version number for the quote. It starts with 1 and the original quote will not have a value.</description>
        <inlineHelpText>The Amend: Re-Quote version number for the quote.</inlineHelpText>
        <label>Amend: Re-Quote Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConsumptionRateOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read-only indicator to show whether a quote contains overriding consumption rates.</description>
        <inlineHelpText>Read-only indicator to show whether a quote contains overriding consumption rates.</inlineHelpText>
        <label>Consumption Rate Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Subscription End Date</fullName>
                    <default>true</default>
                    <label>By Subscription End Date</label>
                </value>
                <value>
                    <fullName>Single Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>This is a Roll-Up Summary field.</description>
        <inlineHelpText>This is a Roll-Up Summary field.</inlineHelpText>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>